2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-21  Andreas Kupries  <andreask@activestate.com>

	* loggerperformance.test: Renaming to 'loggerperformance'. This is
	  neither a .tcl file of the package itself, nor does it belong
	  into the testsuite (which is about functionality, not speed). It
	  is a benchmark application.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* log.man:
	* log.tcl:
	* pkgIndex.tcl:  Set version of the package 'log' to to 1.0.2.

	* logger.tcl: Fixed bug #614591.

2003-02-25  David N. Welton  <davidw@dedasys.com>

	* logger.tcl: Require Tcl 8.2 - we use string map.

2003-01-30  David N. Welton  <davidw@dedasys.com>

	* loggerperformance.test: Changed file name so as to avoid
	  problems with autoindexer.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* logger.man: More semantic markup, less visual one.
	* log.man:

2002-12-16  David N. Welton  <davidw@dedasys.com>

	* logger.test: Logger tests.

	* loggerperformance.tcl : Logger performance testing.

	* logger.man : Logger documentation.

	* logger.tcl: Initial commit of logger package.

2002-02-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.n:
	* log.man: Rewrote the introduction to the module for better
	  understanding by novices. Added examples to highlight use cases
	  from the simplest to more complex ones.

2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Version up to 1.0.1 to differentiate development from the
	  version in the tcllib 1.2 release.

	* log.tcl:
	* log.test: Updated code and tests to cover all paths through the
	  code.

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-03-20  Andreas Kupries <andreas_kupries@users.sourceforge.net>
